[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/enemies/Koopa_Shell.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/enemies/Koopa_Walk1.png" type="Texture" id=3]
[ext_resource path="res://Assets/enemies/Koopa_Walk2.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 9.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 6 )

[node name="Koopa" type="KinematicBody2D"]
collision_layer = 135
collision_mask = 10
script = ExtResource( 2 )
is_shelly = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
frame = 1
playing = true

[node name="DeadSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -5.68434e-14 )
scale = Vector2( 0.8, 0.8 )

[node name="I_Died" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="I_Died"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="I_Was_Killed_By_Something_Bad" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 65536

[node name="Left_Bumper" type="Area2D" parent="."]
position = Vector2( -9, 2 )
collision_layer = 0
collision_mask = 64
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Bumper"]
shape = SubResource( 4 )

[node name="Right_Bumper" type="Area2D" parent="."]
position = Vector2( 8, 2 )
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Bumper"]
position = Vector2( 1, 0 )
shape = SubResource( 4 )

[node name="Left_Killbrush" type="StaticBody2D" parent="."]
position = Vector2( -9, 2 )
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Killbrush"]
shape = SubResource( 4 )

[node name="Right_Killbrush" type="StaticBody2D" parent="."]
position = Vector2( 9, 2 )
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Killbrush"]
shape = SubResource( 4 )

[connection signal="body_entered" from="I_Died" to="." method="_on_I_Died_body_entered"]
[connection signal="body_entered" from="I_Was_Killed_By_Something_Bad" to="." method="_on_I_Was_Killed_By_Something_Bad_body_entered"]
[connection signal="body_entered" from="Left_Bumper" to="." method="_on_Left_Bumper_body_entered"]
[connection signal="body_entered" from="Right_Bumper" to="." method="_on_Right_Bumper_body_entered"]
